--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -29,5 +29,7 @@ on:
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    env:
+      GithubCtx: ${{ toJSON(github}}
     steps:
-      - run: echo "running action with input ${{ github.event.inputs.name }}"
+      - run: echo "running action with input $GithubCtx"
